[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/bumper.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Bumper.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 48.0

[sub_resource type="Animation" id=2]
resource_name = "bounce"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.7 ), Vector2( 1, 1.2 ), Vector2( 1, 0.85 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 12 ), Vector2( 0, -7 ), Vector2( 0, 7 ), Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 48, 40 )

[node name="Bumper" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 2 )

[node name="AreaDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetector"]
shape = SubResource( 5 )
[connection signal="area_entered" from="." to="." method="_on_Bumper_area_entered"]
[connection signal="area_entered" from="AreaDetector" to="." method="_on_AreaDetector_area_entered"]
[connection signal="area_exited" from="AreaDetector" to="." method="_on_AreaDetector_area_exited"]
